R293: jOOQ ambiguous-key fix + per-module -Werror guard (phases 3-4)
Completes the build-warning cleanup. Full `mvn install -Plocal-db` is now
warning-free under `-Xlint:all -Werror`; only declared-out-of-scope lines
survive (sandbox jOOQ PG-version mismatch, Maven Guice/Unsafe JVM notes, the
R294 BuildWarning-channel fixture warning).

Phase 3 (jOOQ ambiguous keys): disabled <implicitJoinPathsToMany> on the
public.* codegen. Sakila's store/staff mutual FKs and the category self-FK
generate colliding inbound-key method names; no catalog consumer navigates
those to-many path methods (the rewrite reads ForeignKey metadata off Keys
directly), so turning the feature off is the warning's own first remedy and
cheaper than a disambiguating GeneratorStrategy.

Phase 4 (guard): added -Werror to the parent pom's global compilerArgs, so
every -Xlint:all category is enforced as an error across every module's main
and test compile, including graphitron-sakila-example's release-17 compile of
generated sources (the cross-module backstop). No category excluded; documented
escape hatch in the pom comment. Updated the sakila-example ratchet comment to
drop the "-Werror deliberately omitted" paragraph.

Residual generated-code casts surfaced by -Werror (new fixtures arrived on
trunk since the plan's inventory) handled per the established split:
- removable (env.getArgument / env.getSource, both <T> T) dropped via inference:
  ServiceMethodCallEmitter top-level scalar args, FetcherEmitter list-payload
  env.getSource arm
- genuinely unchecked suppressed at the narrowest scope (the local declaration,
  valid inside the fetcher lambda): (List<X>) success.value() off
  Outcome.Success<?>, and (List<X>) map.get(key) for nested-input service args
- FetcherPipelineTest assertions updated from the old cast spelling to the
  cast-free `List<Map<?,?>> in = env.getArgument(...)` form

https://claude.ai/code/session_01NC4vV6g21yktcwEdQgdd9v